k3s_cluster/base/dmz/media/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dmz
  labels:
    app: dmz-media-prowlarr
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`prowlarr.media.dmz.home`)
      middlewares:
        - name: dmz-media-middleware-auth-trauth # authentik
      services:
        - name: dmz-media-prowlarr-service
          port: 6659
  #tls: {}
